examples/should_fail/send-loop-back.anvil
chan ch {
    left req : (logic[8]@req),
    right res : (logic[8]@res)
}

proc foo (ch: left ch) {
    reg r : logic[8];
    loop {
        let x = recv ch.req >>
        {
            if 1'b1 {
                set r := x
            } else {
                dprint "Never Happens" ()
            };
            cycle 1
        } >>
        send ch.res(*r) >>
        cycle 1
    }
}
